# -estrutura-dado

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  LICENSE  README.md  docs.md  main.py
cpp_src/: .buckconfig  .clang-format  .gitignore  BUCK  CMakeLists.txt  README.md
cpp_src/benchmarks/: benchmark_sort.cpp  bubble_sort.cpp  bubble_sort_enhanced.cpp  quick_sort.cpp
cpp_src/game/: CMakeLists.txt
cpp_src/game/source/: main.cc
cpp_src/includes/lesson/: chrono.cc  chrono.h  console.cc  console.h  helper.h  helper.hpp  print.hpp  queue.cc  queue.h  search.cc  search.h  sort.cc  sort.h  stack.cc  stack.h  vector.cc  vector.h
cpp_src/includes/lesson/array/: queue.cc  queue.h  stack.cc  stack.h  vector.cc  vector.h
cpp_src/includes/lesson/linked/: list.cc  list.h  node.cc  node.h
cpp_src/includes/this/: search.hpp  sort.hpp
cpp_src/lesson/: CMakeLists.txt
cpp_src/lesson/include/: sort.h
cpp_src/lesson/include/array/: queue.h  vector.h
cpp_src/lesson/include/lesson/: chrono.h  console.h  gamer.h  search.h
cpp_src/lesson/include/lesson/array/: stack.h
cpp_src/lesson/include/lesson/linked/: circular.h  list.h
cpp_src/lesson/include/lesson/math/: factorial.h
cpp_src/lesson/include/lesson/node/: single.h
cpp_src/lesson/include/linked/list/: circular.h  simple.h
cpp_src/lesson/include/node/: binary.h  dual.h
cpp_src/lesson/include/tree/: binary.h  bsearch.h
cpp_src/lesson/private/linked/node/: pair.h  simple.h
cpp_src/lesson/private/node/: binary.h
cpp_src/lesson/source/: chrono.cc  console.cc  gamer.cc  search.cc  sort.cc
cpp_src/lesson/source/array/: queue.cc  stack.cc  vector.cc
cpp_src/lesson/source/linked/: circular.cc  list.cc
cpp_src/lesson/source/linked/list/: circular.cc  simple.cc
cpp_src/lesson/source/linked/node/: simple.cc
cpp_src/lesson/source/math/: factorial.cc
cpp_src/lesson/source/node/: binary.cc  simple.cc
cpp_src/lesson/source/tree/: bsearch.cc
cpp_src/lesson/test/: CMakeLists.txt  vector.cc
cpp_src/list/: CMakeLists.txt
cpp_src/list-gui/: CMakeLists.txt
cpp_src/list-gui/source/: main.cc
cpp_src/list/private/: menu.h
cpp_src/list/source/: main.cc  menu.cc
cpp_src/sources/: main.cpp  menu.hpp  task1.cpp  task2.cpp
cpp_src/task1/: CMakeLists.txt
cpp_src/task1/source/: main.cc
cpp_src/task2/: CMakeLists.txt
cpp_src/task2/source/: main.cc
javascript_src/: .gitignore  README.md  gulpfile.js  listaLinear.js  package-lock.json  package.json
javascript_src/Arvores/: binary-tree.js  index.js
javascript_src/ListasEncadeadas/: listaencadeada.js  pilhaEncadeada.js
javascript_src/Pilha_Fila/: newpilha.js  pilha.js
javascript_src/Pilhas_FIlas/: fila.js  tarefa1.js  tarefa2.js  tarefa3.js
javascript_src/TDE/: duple-linked-list.js  index.js
javascript_src/challenge-linked-list/: duple-linked-list.js  index.js
javascript_src/listasLineares/: lista.js  lista_plus.js
javascript_src/primeiroTrabalho/: lista.js
javascript_src/segundoTrabalho/: lista_plus.js
javascript_src/src/: index.js
javascript_src/src/challenge-linked-list/: duple-linked-list.js
javascript_src/src/cli/ansi/: color.js
javascript_src/src/cli/ascii-art/: estrutura-de-dados.js  mais-saude.js  opstack.js
javascript_src/src/lesson/: binary-node.js  duple-linked-list.js  linked-list.js  node-duple.js  node.js  queue-priority.js  queue.js  random-numbers.js  stack-operations.js  stack.js
javascript_src/src/linked-list/: linked-lisk.js  linked-stack.js
javascript_src/src/stack-queue/: queue.js  stack.js  task1.js  task2.js  task3.js
javascript_src/src/tde/: duple-linked-list.js  task-binary-tree.js  task-game.js  task-mais-saude.js  task-opstack.js  task-queue-priority.js  task-queue-stack.js  task-queue.js  task-stack-operations.js  task-stack.js  task1.js
javascript_src/src/tree/: binary-tree.js  index.js
python/: main.py
python_src/: README.md  helpers.py  index.py  main.py  manage.py  menu.py  ordering_algorithms.py  search_algorithms.py
python_src/estrutura_dados/: binary_tree.py  helpers.py  index.py  linked-lists.py  pilha.py  pilha_fila.py  search_algorithms.py  structs.py  tarefa_1.py  tarefa_2.py
python_src/tests/: tests_binary_tree.py  tests_generate_random_numbers.py  tests_search_algorithms.py
tests/: tests_generate_random_numbers.py  tests_linear_search.py  tests_ordering_algorithms.py  tests_search_algorithms.py
